--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <developers>
         <developer>
-            <id>dscho</id>
+            <id>iamm</id>
             <name>Maximilian Maske</name>
             <email>m.maske@posteo.de</email>
             <organization>HTW-Berlin</organization>
